apps/applications/tcp-demo/chart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo
  namespace: tcp-demo
spec:
  type: ClusterIP
  selector:
    app: tcp-echo
  ports:
  - name: tcp-echo
    port: 7777
    targetPort: 7777
