apps/applications/tcp-demo/chart/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tcp-echo
  namespace: tcp-demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: tcp-echo
          port: 7777
